# libTokenAuthz

./: .gitlab-ci.yml  Makefile.am  README.md  TTokenAuthz.cxx  TTokenAuthz.h  acinclude.m4  bootstrap.sh  configure.ac  tokenauthz.spec  tokenauthztest.cxx
AuthzXMLreader/: ChangeLog  Makefile.am  Makefile.in  README  TAuthzXMLreader.cxx  TAuthzXMLreader.h
SealedEnvelope/: AUTHORS  Makefile.am  Makefile.in  README  TSealedEnvelope.cxx  TSealedEnvelope.h  authzwrite.pl  decode.cxx  encode.cxx  spc_b64.cxx  spc_b64.h  xrdauthz-read.pl  xrdauthz-write.pl  xrdauthz.pl
SealedEnvelope/perl/: Makefile.PL.in  SealedEnvelope.i
conf/: TkAuthz.Authorization.allow-all  TkAuthz.Authorization.example  TkAuthz.Authorization.test
